# MiniOBJ

./: CMakeLists.txt  README.md
miniOBJ/: CMakeLists.txt
miniOBJ/include/: OBJ.hpp
miniOBJ/src/: Main.cpp
